using the exclusion list when getting tags from the AI. see #183

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -284,6 +284,15 @@
           </label>
         </td>
       </tr>
+      <tr class="add_tags_tr">
+        <td><span>__MSG_prefs_OptionText_add_tags_hide_exclusions__</span></td>
+        <td>
+          <label>
+            <input type="checkbox" id="add_tags_hide_exclusions" name="add_tags_hide_exclusions" class="option-input" />
+            __MSG_prefs_OptionText_add_tags_hide_exclusions_Info__
+          </label>
+        </td>
+      </tr>
       <tr>
         <td style="width:20em"><label>
           <span>__MSG_Debug__</span>
