--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -12,6 +12,7 @@
         <li>Default prompts text has been translated [<a href="https://github.com/micz/ThunderAI/issues/185">#185</a>].</li>
         <li>Data placeholder for the full available tags list added [<a href="https://github.com/micz/ThunderAI/issues/197">#197</a>].</li>
         <li>Data placeholder for the single mail tags list added [<a href="https://github.com/micz/ThunderAI/issues/198">#198</a>].</li>
+        <li>The Custom Propts tab has now an icon.</li>
         <li>Minor bugs fixed.</li>
         <li>...</li>
       </ul>
