added a button in the options page to open the tag info page. see #183

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -267,7 +267,8 @@
         </td>
       </tr>
       <tr class="add_tags_tr">
-        <td><span>__MSG_prefs_OptionText_add_tags__</span></td>
+        <td><span>__MSG_prefs_OptionText_add_tags__</span>
+        <br><button id="btnManageTagsInfo" class="btn_small">__MSG_prefs_OptionText_btnManageTagsInfo__</button></td>
         <td>
           <label>
             <input type="checkbox" id="add_tags" name="add_tags" class="option-input" />
