custom prompts and tags setting pages moved under pages folder

--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>ThunderAI - __MSG_AddTags_PageTitle__</title>
     <link rel="stylesheet" href="mzta-add-tags.css">
-    <link rel="icon" href="../images/icon-16px.png">
+    <link rel="icon" href="../../images/icon-16px.png">
 </head>
 <body>
     TEST
     <script src="mzta-add-tags.js" type="module"></script>
-    <script src="../js/mzta-i18n.js"></script>
+    <script src="../../js/mzta-i18n.js"></script>
 </body>
 </html>
