--- a/pages/customprompts/mzta-custom-prompts.html
+++ b/pages/customprompts/mzta-custom-prompts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>ThunderAI - __MSG_customPrompts_managePrompts__</title>
     <link rel="stylesheet" href="mzta-custom-prompts.css">
-    <link rel="icon" href="../images/icon-16px.png">
+    <link rel="icon" href="../../images/icon-16px.png">
 </head>
 <body>
     <div>
@@ -99,6 +99,6 @@
     <div class="storage_space">__MSG_StorageSpace__: <span id="storage_space"></span></div>
     <script src="list.js"></script>
     <script src="mzta-custom-prompts.js" type="module"></script>
-    <script src="../js/mzta-i18n.js"></script>
+    <script src="../../js/mzta-i18n.js"></script>
 </body>
 </html>
