--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -15,6 +15,7 @@
         __MSG_AddTags_prompt_text_title__
         <br><span class="infoline">__MSG_prefs_OptionText_btnManagePrompts_infoline__ <a href="https://micz.it/thunderbird-addon-thunderai/data-placeholders/">__MSG_customPrompts_managePrompts_help__</a></span>
         <br><textarea id="addtags_prompt_text" rows="15"></textarea>
+        <div id="addtags_info_limit_num"></div>
         <div class="btn_div"><button id="btn_save_prompt" disabled>__MSG_save__</button></div>
     </div>
     <div id="addtags_excl_list_container">
