added a reset button for the aggtags prompt. see #183

--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -20,7 +20,7 @@
             <ul class="autocomplete-list hidden"></ul>
         </div>
         <div id="addtags_info_limit_num"></div>
-        <div class="btn_div"><button id="btn_save_prompt" disabled>__MSG_save__</button></div>
+        <div class="btn_div"><button id="btn_reset_prompt" disabled>__MSG_reset_default__</button><button id="btn_save_prompt" disabled>__MSG_save__</button></div>
     </div>
     <div id="addtags_excl_list_container">
         __MSG_AddTags_excl_list_title__
