showing an unsaved msg when needed. see #183

--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -12,7 +12,7 @@
         <p>__MSG_AddTags_info_default__</p>
     </div>
     <div id="addtags_prompt_container">
-        __MSG_AddTags_prompt_text_title__
+        __MSG_AddTags_prompt_text_title__<span id="addtags_prompt_unsaved" class="unsaved hidden"> __MSG_customPrompts_unsaved_changes__</span>
         <br><span class="infoline">__MSG_prefs_OptionText_btnManagePrompts_infoline__ <a href="https://micz.it/thunderbird-addon-thunderai/data-placeholders/">__MSG_customPrompts_managePrompts_help__</a></span>
         <br>
         <div class="autocomplete-container">
