--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -23,8 +23,9 @@
         <div class="btn_div"><button id="btn_reset_prompt" disabled>__MSG_reset_default__</button><button id="btn_save_prompt" disabled>__MSG_save__</button></div>
     </div>
     <div id="addtags_excl_list_container">
-        __MSG_AddTags_excl_list_title__
-        <br><span class="infoline">__MSG_AddTags_excl_list_infoline__</span>
+        __MSG_AddTags_excl_list_title__<span id="excl_list_unsaved" class="unsaved hidden"> __MSG_customPrompts_unsaved_changes__</span>
+        <br><span class="infoline">__MSG_AddTags_excl_list_infoline__
+            <br>__MSG_AddTags_excl_list_infoline2__</span>
         <br><textarea id="addtags_excl_list" rows="15"></textarea>
         <div class="btn_div"><button id="btn_save_excl_list" disabled>__MSG_save__</button></div>
     </div>
