--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -14,6 +14,7 @@
         <li>Data placeholder for the single mail tags list added [<a href="https://github.com/micz/ThunderAI/issues/198">#198</a>].</li>
         <li>The Custom Prompts tab has now an icon.</li>
         <li>The red border in the Custom Prompts configuration page that highlights a needed prompt configuration that is not selected is now removed when the corresponding placeholder is removed [<a href="https://github.com/micz/ThunderAI/issues/201">#201</a>].</li>
+        <li>Polish (pl) translation added, thanks to <a href="https://github.com/neexpl">neexpl</a>.</li>
         <li>Minor bugs fixed.</li>
         <li>...</li>
       </ul>
