using add_tags_first_uppercase option. see #183

--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -11,7 +11,7 @@
         <h1 class="page_title">__MSG_AddTags_PageTitle__</h1>
         <p>__MSG_AddTags_info_default__</p>
     </div>
-    <div class="addtags_table_title">__MSG_AddTags_prompt_text_title__</div>
+    <div class="addtags_table_title">__MSG_AddTags_prompt_prefs_title__</div>
     <table id="miczPrefs">
           <tr class="add_tags_tr">
             <td><span>__MSG_prefs_OptionText_add_tags_maxnum__</span></td>
@@ -28,6 +28,15 @@
               <label>
                 <input type="checkbox" id="add_tags_hide_exclusions" name="add_tags_hide_exclusions" class="option-input" />
                 __MSG_prefs_OptionText_add_tags_hide_exclusions_Info__
+              </label>
+            </td>
+          </tr>
+          <tr class="add_tags_tr">
+            <td><span>__MSG_prefs_OptionText_add_tags_first_uppercase__</span></td>
+            <td>
+              <label>
+                <input type="checkbox" id="add_tags_first_uppercase" name="add_tags_first_uppercase" class="option-input" />
+                __MSG_prefs_OptionText_add_tags_first_uppercase_Info__
               </label>
             </td>
           </tr>
