--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -11,7 +11,7 @@
         <h1 class="page_title">__MSG_AddTags_PageTitle__</h1>
         <p>__MSG_AddTags_info_default__</p>
     </div>
-    <div class="addtags_table_title">__MSG_AddTags_prompt_prefs_title__</div>
+    <div class="addtags_table_title section_title">__MSG_AddTags_prompt_prefs_title__</div>
     <table id="miczPrefs">
           <tr class="add_tags_tr">
             <td><span>__MSG_prefs_OptionText_add_tags_maxnum__</span></td>
@@ -42,7 +42,7 @@
           </tr>
     </table>
     <div id="addtags_prompt_container">
-        __MSG_AddTags_prompt_text_title__<span id="addtags_prompt_unsaved" class="unsaved hidden"> __MSG_customPrompts_unsaved_changes__</span>
+        <span class="section_title">__MSG_AddTags_prompt_text_title__</span><span id="addtags_prompt_unsaved" class="unsaved hidden"> __MSG_customPrompts_unsaved_changes__</span>
         <br><span class="infoline">__MSG_prefs_OptionText_btnManagePrompts_infoline__ <a href="https://micz.it/thunderbird-addon-thunderai/data-placeholders/">__MSG_customPrompts_managePrompts_help__</a></span>
         <br>
         <div class="autocomplete-container">
@@ -53,7 +53,7 @@
         <div class="btn_div"><button id="btn_reset_prompt" disabled>__MSG_reset_default__</button><button id="btn_save_prompt" disabled>__MSG_save__</button></div>
     </div>
     <div id="addtags_excl_list_container">
-        __MSG_AddTags_excl_list_title__<span id="excl_list_unsaved" class="unsaved hidden"> __MSG_customPrompts_unsaved_changes__</span>
+        <span class="section_title">__MSG_AddTags_excl_list_title__</span><span id="excl_list_unsaved" class="unsaved hidden"> __MSG_customPrompts_unsaved_changes__</span>
         <br><span class="infoline">__MSG_AddTags_excl_list_infoline__
             <br>__MSG_AddTags_excl_list_infoline2__</span>
         <br><textarea id="addtags_excl_list" rows="15"></textarea>
