--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -239,6 +239,7 @@
         <td>
           <label>
             <span>__MSG_OpenAIComp_Models__</span>
+            <br><button id="btnOpenAICompForceModel" class="btn_small">__MSG_prefs_OpenAIComp_ForceModel__</button></td>
           </label>
         </td>
         <td>
