--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -11,8 +11,8 @@
       <ul>
         <li><i>[ChatGPT API][Ollama API][OpenAI Comp API]</i> Added a special prompt to apply tag to emails [<a href="https://github.com/micz/ThunderAI/issues/183">#183</a>].</li>
         <li>Default prompts text has been translated [<a href="https://github.com/micz/ThunderAI/issues/185">#185</a>].</li>
-        <li>Data placeholder for the full available tags list added [<a href="https://github.com/micz/ThunderAI/issues/197">#197</a>].</li>
-        <li>Data placeholder for the single mail tags list added [<a href="https://github.com/micz/ThunderAI/issues/198">#198</a>].</li>
+        <li>Data placeholder <i>{%full_tags_list%}</i> for the full available tags list added [<a href="https://github.com/micz/ThunderAI/issues/197">#197</a>].</li>
+        <li>Data placeholder <i>{%mail_tags%}</i> for the single mail tags list added [<a href="https://github.com/micz/ThunderAI/issues/198">#198</a>].</li>
         <li>User <a href="https://forms.gle/1qK2wcbuhaRzhwyt9">survey link</a> added [<a href="https://github.com/micz/ThunderAI/issues/202">#202</a>].</li>
         <li>Polish (pl) translation added, thanks to <a href="https://github.com/neexpl">neexpl</a>.</li>
         <li><i>[OpenAI Comp API]</i> Added a button in the options page to manually insert the model [<a href="https://github.com/micz/ThunderAI/issues/205">#205</a>].</li>
