--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -40,6 +40,15 @@
               </label>
             </td>
           </tr>
+          <tr class="add_tags_tr">
+            <td><span>__MSG_prefs_OptionText_add_tags_force_lang__</span></td>
+            <td>
+              <label>
+                <input type="checkbox" id="add_tags_force_lang" name="add_tags_force_lang" class="option-input" />
+                __MSG_prefs_OptionText_add_tags_force_lang_Info__
+              </label>
+            </td>
+          </tr>
     </table>
     <div id="addtags_prompt_container">
         <span class="section_title">__MSG_AddTags_prompt_text_title__</span><span id="addtags_prompt_unsaved" class="unsaved hidden"> __MSG_customPrompts_unsaved_changes__</span>
@@ -50,7 +59,7 @@
             <textarea id="addtags_prompt_text" rows="15"></textarea>
             <ul class="autocomplete-list hidden"></ul>
         </div>
-        <div id="addtags_info_limit_num"></div>
+        <div id="addtags_info_additional_statements"></div>
         <div class="btn_div"><button id="btn_reset_prompt" disabled>__MSG_reset_default__</button><button id="btn_save_prompt" disabled>__MSG_save__</button></div>
     </div>
     <div id="addtags_excl_list_container">
