--- a/popup/mzta-popup.html
+++ b/popup/mzta-popup.html
@@ -13,7 +13,7 @@
     <div id="mzta_sending_prompt"><img src="mzta-loading.svg" title="__MSG_SendingPrompt__"></div>
     <input type="text" id="mzta_search_input" placeholder="__MSG_SearchPrompt__">
     <div id="mzta_autocomplete-items-loading"><img src="mzta-loading.svg" title="__MSG_Loading__"></div>
-    <div id="mzta_autocomplete-items" style="display: none;"></div>
+    <div id="mzta_autocomplete-items"></div>
 </div>
 <script src="mzta-popup.js" type="module"></script>
 <script src="../js/mzta-i18n.js"></script>
