--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,7 +7,7 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 3.0.0 - ??/??/2024</h2>
+      <h2>Version 3.0.0 - 05/01/2025</h2>
       <ul>
         <li><i>[ChatGPT API][Ollama API][OpenAI Comp API]</i> Added a special prompt to apply tag to emails [<a href="https://github.com/micz/ThunderAI/issues/183">#183</a>].</li>
         <li>Default prompts text has been translated [<a href="https://github.com/micz/ThunderAI/issues/185">#185</a>].</li>
@@ -19,7 +19,6 @@
         <li>The Custom Prompts tab has now an icon.</li>
         <li>The red border in the Custom Prompts configuration page that highlights a needed prompt configuration that is not selected is now removed when the corresponding placeholder is removed [<a href="https://github.com/micz/ThunderAI/issues/201">#201</a>].</li>
         <li>Minor bugs fixed.</li>
-        <li>...</li>
       </ul>
       <h2>Version 2.3.4 - 06/12/2024</h2>
       <ul>
