google gemini system instructions added to the addon options page. see #217

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -202,6 +202,19 @@
           </label>
         </td>
       </tr>
+      <tr class="conntype_google_gemini_api">
+        <td>
+          <label>
+            <span>__MSG_GoogleGemini_SystemInstruction__</span>
+          </label>
+        </td>
+        <td>
+          <label>
+            <textarea id="google_gemini_system_instruction" name="google_gemini_system_instruction" class="option-input"></textarea>
+            <br>__MSG_GoogleGemini_SystemInstruction_Info__
+          </label>
+        </td>
+      </tr>
       <tr class="conntype_ollama_api">
         <td><label>
           <span>__MSG_prefs_API_Host__</span>
