chatgpt_developer_messages option added. see #218

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -175,6 +175,19 @@
           </label>
         </td>
       </tr>
+      <tr class="conntype_chatgpt_api">
+        <td>
+          <label>
+            <span>__MSG_ChatGPT_Developer_Messages__</span>
+          </label>
+        </td>
+        <td>
+          <label>
+            <textarea id="chatgpt_developer_messages" name="chatgpt_developer_messages" class="option-input option-textarea"></textarea>
+            <br>__MSG_ChatGPT_Developer_Messages_Info__
+          </label>
+        </td>
+      </tr>
       <tr class="conntype_google_gemini_api">
         <td><label>
           <span>__MSG_prefs_GoogleGemini_API_Key__</span>
@@ -210,7 +223,7 @@
         </td>
         <td>
           <label>
-            <textarea id="google_gemini_system_instruction" name="google_gemini_system_instruction" class="option-input"></textarea>
+            <textarea id="google_gemini_system_instruction" name="google_gemini_system_instruction" class="option-input option-textarea"></textarea>
             <br>__MSG_GoogleGemini_SystemInstruction_Info__
           </label>
         </td>
