get_calendar_event added in the options page. see micz/ThunderAI/#182

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -335,6 +335,17 @@
         </td>
       </tr>
       <tr>
+      <tr class="get_calendar_event_tr">
+        <td><span>__MSG_prefs_OptionText_get_calendar_event__</span>
+        <br><button id="btnManageCalendarEventInfo" class="btn_small">__MSG_prefs_OptionText_btnManageCalendarEventInfo__</button></td>
+        <td>
+          <label>
+            <input type="checkbox" id="get_calendar_event" name="get_calendar_event" class="option-input" />
+            __MSG_prefs_OptionText_get_calendar_event_Info__
+          </label>
+        </td>
+      </tr>
+      <tr>
         <td style="width:20em"><label>
           <span>__MSG_Debug__</span>
         </label></td>
