--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -344,6 +344,12 @@
           </label>
         </td>
       </tr>
+      <tr class="get_calendar_event_tr" id="no_sparks">
+        <td colspan="2">
+          <span>__MSG_prefs_OptionText_get_calendar_event_Sparks_not_present__</span>
+          <br><a href="https://addons.thunderbird.net/it/thunderbird/addon/thunderai-sparks">__MSG_prefs_OptionText_download_now__</a>
+        </td>
+      </tr>
       <tr>
         <td style="width:20em"><label>
           <span>__MSG_Debug__</span>
