--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,10 +7,10 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 3.1.1 - ??/??/2025</h2>
+      <h2>Version 3.1.1 - 29/01/2025</h2>
       <ul>
         <li>Polish (pl) translation improved, thanks to <a href="https://github.com/neexpl">neexpl</a>.</li>
-        <li>...</li>
+        <li>Fixed the text in the add calendar event settings page.</li>
       </ul>
       <h2>Version 3.1.0 - 27/01/2025</h2>
       <ul>
