--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,11 +7,10 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 3.1.2 - ??/??/2025</h2>
+      <h2>Version 3.1.2 - 29/01/2025</h2>
       <ul>
         <li>Forcing ThunderAI menu reload when installing Sparks [<a href="https://github.com/micz/ThunderAI/issues/240">#240</a>].</li>
         <li>Fixed a bug in translating special prompts.</li>
-        <li>...</li>
       </ul>
       <h2>Version 3.1.1 - 29/01/2025</h2>
       <ul>
