--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -67,6 +67,15 @@
               </label>
             </td>
           </tr>
+          <tr class="add_tags_tr" id="add_tags_auto_only_inbox_tr">
+            <td><span>__MSG_prefs_OptionText_add_tags_auto_only_inbox__</span></td>
+            <td>
+              <label>
+                <input type="checkbox" id="add_tags_auto_only_inbox" name="add_tags_auto_only_inbox" class="option-input" />
+                __MSG_prefs_OptionText_add_tags_auto_only_inbox_Info__
+              </label>
+            </td>
+          </tr>
     </table>
     <div id="addtags_prompt_container">
         <span class="section_title">__MSG_AddTags_prompt_text_title__</span><span id="addtags_prompt_unsaved" class="unsaved hidden"> __MSG_customPrompts_unsaved_changes__</span>
