spamfilter added to options page. see #231

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -334,6 +334,16 @@
           </label>
         </td>
       </tr>
+      <tr class="spamfilter_tr">
+        <td><span>__MSG_prefs_OptionText_spamfilter__</span>
+        <br><button id="btnManageSpamFilterInfo" class="btn_small">__MSG_prefs_OptionText_btnManageSpamFilterInfo__</button></td>
+        <td>
+          <label>
+            <input type="checkbox" id="spamfilter" name="spamfilter" class="option-input" />
+            __MSG_prefs_OptionText_spamfilter_Info__
+          </label>
+        </td>
+      </tr>
       <tr class="get_calendar_event_tr">
         <td><span>__MSG_prefs_OptionText_get_calendar_event__</span>
         <br><button id="btnManageCalendarEventInfo" class="btn_small">__MSG_prefs_OptionText_btnManageCalendarEventInfo__</button></td>
