spamfilter_threshold option added. see #231

--- a/pages/spamfilter/mzta-spamfilter.html
+++ b/pages/spamfilter/mzta-spamfilter.html
@@ -11,6 +11,18 @@
         <h1 class="page_title">__MSG_SpamFilter_PageTitle__</h1>
         <p>__MSG_SpamFilter_info_default__</p>
     </div>
+    <div class="spamfilter_table_title section_title">__MSG_SpamFilter_prompt_prefs_title__</div>
+    <table id="miczPrefs">
+          <tr class="spamfilter_tr">
+            <td><span>__MSG_prefs_OptionText_spamfilter_threshold__</span></td>
+            <td>
+              <label>
+                <input type="number" id="spamfilter_threshold" name="spamfilter_threshold" class="option-input" />
+                <br>__MSG_prefs_OptionText_spamfilter_threshold_Info__
+              </label>
+            </td>
+          </tr>
+    </table>
     <div id="spamfilter_container">
         <span class="section_title">__MSG_GetCalendarEvent_prompt_text_title__</span><span id="spamfilter_event_prompt_unsaved" class="unsaved hidden"> __MSG_customPrompts_unsaved_changes__</span>
         <br><span class="infoline">__MSG_prefs_OptionText_btnManagePrompts_infoline__ <a href="https://micz.it/thunderbird-addon-thunderai/data-placeholders/">__MSG_customPrompts_managePrompts_help__</a>
