--- a/pages/spamfilter/mzta-spamfilter.html
+++ b/pages/spamfilter/mzta-spamfilter.html
@@ -17,7 +17,7 @@
             <td><span>__MSG_prefs_OptionText_spamfilter_threshold__</span></td>
             <td>
               <label>
-                <input type="number" id="spamfilter_threshold" name="spamfilter_threshold" class="option-input" />
+                <input type="number" id="spamfilter_threshold" name="spamfilter_threshold" min="0" max="100" class="option-input" /><span id="spam_threshold_too_low">__MSG_spam_trhreshold_too_low__</span>
                 <br>__MSG_prefs_OptionText_spamfilter_threshold_Info__
               </label>
             </td>
