--- a/pages/spamfilter/mzta-spamfilter.html
+++ b/pages/spamfilter/mzta-spamfilter.html
@@ -17,7 +17,7 @@
             <td><span>__MSG_prefs_OptionText_spamfilter_threshold__</span></td>
             <td>
               <label>
-                <input type="number" id="spamfilter_threshold" name="spamfilter_threshold" min="0" max="100" class="option-input" /><span id="spam_threshold_too_low">__MSG_spam_threshold_too_low__</span>
+                <input type="number" id="spamfilter_threshold" name="spamfilter_threshold" min="0" max="100" class="option-input" /><span id="spamfilter_threshold_too_low">__MSG_spamfilter_threshold_too_low__</span>
                 <br>__MSG_prefs_OptionText_spamfilter_threshold_Info__
               </label>
             </td>
@@ -35,6 +35,24 @@
         <div id="spamfilter_info_additional_statements"></div>
         <div class="btn_div"><button id="btn_reset_prompt" disabled>__MSG_reset_default__</button><button id="btn_save_prompt" disabled>__MSG_save__</button></div>
     </div>
+    <h2>__MSG_SpamReport_Title__</h2>
+    <table id="report_data">
+        <thead>
+            <tr>
+              <th>Message_ID</th>
+              <th>__MSG_Date__</th>
+              <th>__MSG_From__</th>
+              <th>__MSG_Subject__</th>
+              <th>__MSG_Spam_Value__</th>
+              <th>__MSG_Moved_to_Spam__</th>
+              <th>__MSG_Explanation__</th>
+              <th>__MSG_Report_Date__</th>
+            </tr>
+        </thead>
+        <tbody id="report_data_body">
+            <!-- Rows will be inserted dynamically -->
+        </tbody>
+    </table>
     <script src="mzta-spamfilter.js" type="module"></script>
     <script src="../../js/mzta-i18n.js"></script>
 </body>
