openai_comp remote server info added. fixes #263

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -120,7 +120,7 @@
       <tr class="conntype_chatgpt_web">
         <td><label>
           <span>__MSG_prefs_OptionText_chatgpt_web_model__</span>
-          <br><table title="__MSG_prefs_OptionText_chatgpt_web_model_tooltip__"><tr><td><i style="font-size:smaller;"><nobr>__MSG_AllowedValues__:</nobr></i></td><td><i style="font-size:smaller;"> &nbsp; <nobr class="conntype_chatgpt_web_option">gpt-4o</nobr> &nbsp; <nobr class="conntype_chatgpt_web_option">gpt-4o-mini</nobr> &nbsp; <nobr class="conntype_chatgpt_web_option">gpt-4</nobr> &nbsp; <nobr class="conntype_chatgpt_web_option">o1-mini</nobr> &nbsp; <nobr class="conntype_chatgpt_web_option">o1-preview</nobr></i></td></tr></table>
+          <br><table title="__MSG_prefs_OptionText_chatgpt_web_model_tooltip__"><tr><td><i class="small_info"><nobr>__MSG_AllowedValues__:</nobr></i></td><td><i class="small_info"> &nbsp; <nobr class="conntype_chatgpt_web_option">gpt-4o</nobr> &nbsp; <nobr class="conntype_chatgpt_web_option">gpt-4o-mini</nobr> &nbsp; <nobr class="conntype_chatgpt_web_option">gpt-4</nobr> &nbsp; <nobr class="conntype_chatgpt_web_option">o1-mini</nobr> &nbsp; <nobr class="conntype_chatgpt_web_option">o1-preview</nobr></i></td></tr></table>
         </label></td>
         <td>
           <label>
@@ -231,7 +231,7 @@
       <tr class="conntype_ollama_api">
         <td><label>
           <span>__MSG_prefs_API_Host__</span>
-          <br><i style="font-size:smaller;">__MSG_prefs_API_Host_Info__ http://127.0.0.1:11434</i>
+          <br><i class="small_info">__MSG_prefs_API_Host_Info__ http://127.0.0.1:11434</i>
         </label></td>
         <td>
           <label>
@@ -256,11 +256,12 @@
       <tr class="conntype_openai_comp_api">
         <td><label>
           <span>__MSG_prefs_API_Host__</span>
-          <br><i style="font-size:smaller;">__MSG_prefs_API_Host_Info__ http://localhost:1234</i>
+          <br><i class="small_info">__MSG_prefs_API_Host_Info__ http://localhost:1234</i>
         </label></td>
         <td>
           <label>
             <input type="text" id="openai_comp_host" name="openai_comp_host" class="option-input" />
+            <br><i class="small_info">__MSG_prefs_OptionText_openai_comp_info_remote__</i>
           </label>
         </td>
       </tr>
@@ -278,7 +279,7 @@
       <tr class="conntype_openai_comp_api">
         <td><label>
           <span>__MSG_prefs_OpenAIComp_API_Key__</span>
-          <br><i style="font-size:smaller;">__MSG_Optional__</i>
+          <br><i class="small_info">__MSG_Optional__</i>
         </label></td>
         <td>
           <div class="api_key-container">
