--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -15,6 +15,7 @@
         <li>Added the <i>{%thunderai_def_sign%}</i> placeholder to get the default signature as defined in the options [<a href="https://github.com/micz/ThunderAI/issues/248">#248</a>].</li>
         <li>Added the <i>{%thunderai_def_lang%}</i> placeholder to get the default language as defined in the options [<a href="https://github.com/micz/ThunderAI/issues/248">#248</a>].</li>
         <li>Croatian (hr) translation added, thanks to Petar Jedvaj.</li>
+        <li>German (de) translation errors fixed.</li>
         <li>Various minor improvements.</li>
         <li>...</li>
       </ul>
