--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -16,6 +16,7 @@
         <li>Added the <i>{%thunderai_def_lang%}</i> placeholder to get the default language as defined in the options [<a href="https://github.com/micz/ThunderAI/issues/248">#248</a>].</li>
         <li>Croatian (hr) translation added, thanks to Petar Jedvaj.</li>
         <li>German (de) translation errors fixed.</li>
+        <li>Translations improved thanks to Hosted Weblate. <a href="https://micz.it/thunderbird-addon-thunderai/translate/">Help translating ThunderAI!</a>.</li>
         <li>Various minor improvements.</li>
         <li>...</li>
       </ul>
