--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,7 +7,7 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 3.2.0 - ??/??/2025</h2>
+      <h2>Version 3.2.0 - 27/02/2025</h2>
       <ul>
         <li><i>[All APIs]</i> Added an option to automatically tag incoming emails [<a href="https://github.com/micz/ThunderAI/issues/237">#237</a>].</li>
         <li><i>[All APIs]</i> Added an configurable antispam filter for incoming emails [<a href="https://github.com/micz/ThunderAI/issues/231">#231</a>].</li>
@@ -18,7 +18,6 @@
         <li>German (de) translation errors fixed.</li>
         <li>Translations improved thanks to Hosted Weblate. <a href="https://micz.it/thunderbird-addon-thunderai/translate/">Help translating ThunderAI!</a>.</li>
         <li>Various minor improvements.</li>
-        <li>...</li>
       </ul>
       <h2>Version 3.1.2 - 29/01/2025</h2>
       <ul>
