--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -10,6 +10,7 @@
       <h2>Version 3.2.1 - ??/??/2025</h2>
       <ul>
         <li>Fix calling a prompt without giving tags related permissions [<a href="https://github.com/micz/ThunderAI/issues/275">#275</a>].</li>
+        <li>Deactivating the add tags feature if the related permissions are revoked [<a href="https://github.com/micz/ThunderAI/issues/276">#276</a>].</li>
         <li>Minor bugs fixed.</li>
         <li>...</li>
       </ul>
