--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,12 +7,11 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 3.2.1 - ??/??/2025</h2>
+      <h2>Version 3.2.1 - 03/03/2025</h2>
       <ul>
         <li>Fix calling a prompt without giving tags related permissions [<a href="https://github.com/micz/ThunderAI/issues/275">#275</a>].</li>
         <li>Deactivating the add tags feature if the related permissions are revoked [<a href="https://github.com/micz/ThunderAI/issues/276">#276</a>].</li>
         <li>Minor bugs fixed.</li>
-        <li>...</li>
       </ul>
       <h2>Version 3.2.0 - 27/02/2025</h2>
       <ul>
