--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -10,6 +10,7 @@
       <h2>Version 3.2.2 - ??/??/2025</h2>
       <ul>
         <li>Fixed compatibility with Thunderbird 115 [<a href="https://github.com/micz/ThunderAI/issues/281">#281</a>].</li>
+        <li>Fixed a bug with the optional permissions not retained at startup [<a href="https://github.com/micz/ThunderAI/issues/279">#279</a>]</li>
         <li>...</li>
       </ul>
       <h2>Version 3.2.1 - 03/03/2025</h2>
