--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,11 +7,11 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 3.2.2 - ??/??/2025</h2>
+      <h2>Version 3.2.2 - 05/03/2025</h2>
       <ul>
         <li>Fixed compatibility with Thunderbird 115 [<a href="https://github.com/micz/ThunderAI/issues/281">#281</a>].</li>
         <li>Fixed a bug with the optional permissions not retained at startup [<a href="https://github.com/micz/ThunderAI/issues/279">#279</a>]</li>
-        <li>...</li>
+        <li>Fixed a race condition in saving the report data of the Spam Filter.</li>
       </ul>
       <h2>Version 3.2.1 - 03/03/2025</h2>
       <ul>
