--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,7 +7,7 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 3.2.3 - ??/??/2025</h2>
+      <h2>Version 3.2.3 - 06/03/2025</h2>
       <ul>
         <li><i>[ChatGPT Web]</i> Fixed hiding the Spam Filter options [<a href="https://github.com/micz/ThunderAI/issues/284">#284</a>].</li>
         <li>Unchecking the "Add tags" and "Spam Filter" options if the user revokes the related optional permissions [<a href="https://github.com/micz/ThunderAI/issues/286">#286</a>].</li>
