--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -76,6 +76,15 @@
               </label>
             </td>
           </tr>
+          <tr class="add_tags_tr">
+            <td><span>__MSG_prefs_OptionText_add_tags_context_menu__</span></td>
+            <td>
+              <label>
+                <input type="checkbox" id="add_tags_context_menu" name="add_tags_context_menu" class="option-input" />
+                __MSG_prefs_OptionText_add_tags_context_menu_Info__
+              </label>
+            </td>
+          </tr>
     </table>
     <div id="addtags_prompt_container">
         <span class="section_title">__MSG_AddTags_prompt_text_title__</span><span id="addtags_prompt_unsaved" class="unsaved hidden"> __MSG_customPrompts_unsaved_changes__</span>
