Add checkbox option for spam filter context menu. see #262

--- a/pages/spamfilter/mzta-spamfilter.html
+++ b/pages/spamfilter/mzta-spamfilter.html
@@ -22,6 +22,15 @@
               </label>
             </td>
           </tr>
+          <tr class="spamfilter_tr">
+            <td><span>__MSG_prefs_OptionText_spamfilter_context_menu__</span></td>
+            <td>
+              <label>
+                <input type="checkbox" id="spamfilter_context_menu" name="spamfilter_context_menu" class="option-input" />
+                __MSG_prefs_OptionText_spamfilter_context_menu_Info__
+              </label>
+            </td>
+          </tr>
     </table>
     <div id="spamfilter_container">
         <span class="section_title">__MSG_GetCalendarEvent_prompt_text_title__</span><span id="spamfilter_event_prompt_unsaved" class="unsaved hidden"> __MSG_customPrompts_unsaved_changes__</span>
