Add diff viewer functionality for APIs integrations. see #109

--- a/api_webchat/index.html
+++ b/api_webchat/index.html
@@ -17,6 +17,7 @@
     <!-- Include the JavaScript files at bottom to avoid blocking UI -->
     <script src="messageInput.js" type="module" defer></script>
     <script src="markdown-it.min.js"></script>
+    <script src="../js/lib/diff.js"></script>
     <script src="messagesArea.js" type="module" defer></script>
     <script src="controller.js" type="module" defer></script>
 </body>
