add hyprland warning when using linux. fixes #318

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -12,10 +12,13 @@
         <td colspan="2"><div>__MSG_prefs_SurveyLinkText__<br><a href="https://forms.gle/1qK2wcbuhaRzhwyt9">__MSG_prefs_SurveyLinkText2__</a></div></td>
       </tr>
       <tr id="owl_warning">
-        <td colspan="2"><div>__MSG_prefs_OptionText_owl_warning__ <a href="https://micz.it/thunderbird-addon-thunderai/owl/">__MSG_customPrompts_managePrompts_help__</a></div></td>
+        <td colspan="2"><div class="warning">__MSG_prefs_OptionText_owl_warning__ <a href="https://micz.it/thunderbird-addon-thunderai/owl/">__MSG_customPrompts_managePrompts_help__</a></div></td>
+      </tr>
+      <tr id="hyprland_warning">
+        <td colspan="2" style="text-align:center;" class="warning"><b>Set height and width to 0 if you're using hyprland!</b></td>
       </tr>
       <tr>
-        <td><span>__MSG_prefs_OptionText_chatgpt_win_text__</span></td>
+        <td><span>__MSG_prefs_OptionText_chatgpt_win_text__</span>
         <td>
           <label>
             <span class="dims_label">__MSG_prefs_OptionText_chatgpt_win_height__</span>
