localize hyprland warning message to options

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -15,7 +15,7 @@
         <td colspan="2"><div class="warning">__MSG_prefs_OptionText_owl_warning__ <a href="https://micz.it/thunderbird-addon-thunderai/owl/">__MSG_customPrompts_managePrompts_help__</a></div></td>
       </tr>
       <tr id="hyprland_warning">
-        <td colspan="2" style="text-align:center;" class="warning"><b>Set height and width to 0 if you're using hyprland!</b></td>
+        <td colspan="2" style="text-align:center;" class="warning"><b>__MSG_hyprland_warning__</b></td>
       </tr>
       <tr>
         <td><span>__MSG_prefs_OptionText_chatgpt_win_text__</span>
