--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,7 +9,8 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 3.3.1 - ??/??/2025</h2>
       <ul>
-        <li>Added a warning in the options page for hyprland users [<a href="https://github.com/micz/ThunderAI/issues/318">#318</a>].</li>
+        <li><i>[ChatGPT Web]</i> the additional text field is now focused [<a href="https://github.com/micz/ThunderAI/issues/323">#323</a>].</li>
+        <li>Added a warning in the options page for linux users [<a href="https://github.com/micz/ThunderAI/issues/318">#318</a>].</li>
         <li>Czech (cs) translation updated, thanks to <a href="https://hosted.weblate.org/user/jaroush/">Jaroslav Staněk</a>.</li>
         <li>...</li>
       </ul>
